# mm3h

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml
app/: Cargo.toml
app/benches/hash/: main.rs
app/src/: main.rs
src/: generic.rs  generic128.rs  generic64.rs  hasher.rs  lib.rs
src/avx/: hu32.rs  mod.rs
src/neon/: hu32.rs  mod.rs
src/sse/: hu32.rs  mod.rs
