[workspace]
members = ["app"]

[package]
name = "mm3h"
version = "0.1.1"
edition = "2024"
description = "Murmur3 optimized hasher"
keywords = ["hash", "murmur3", "murmur"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/mm3h"
categories = ["algorithms"]
homepage = "https://github.com/awxkee/mm3h"
repository = "https://github.com/awxkee/mm3h"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
include = ["/src/", "/README.md", "/LICENSE.md", "/LICENSE-APACHE.md"]
rust-version = "1.87.0"

[dependencies]

[features]
default = ["neon", "avx", "sse"]
avx = []
neon = []
sse = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
